merge: 合并 vercel.json fix: 修复 Hexo 和 Vivia 中的错误配置 fix: 按照 Vivia 的代码修改 Front-matter

--- a/source/_posts/图床测试.md
+++ b/source/_posts/图床测试.md
@@ -5,15 +5,11 @@ categories:
   - 计算机
   - 网站搭建
 tags: 网站搭建
-cover: 'https://s2.hdslb.com/bfs/article/760e7faa22a466d6bb26d3dd9aba1af2160f5514.jpg@1e_1c.webp'
+photos: https://s2.hdslb.com/bfs/article/760e7faa22a466d6bb26d3dd9aba1af2160f5514.jpg@1e_1c.webp
 abbrlink: f672cc4e
 description: 让我看看图床够不够快？
 date: 2022-12-03 15:55:51
 updated: 2023-01-03 15:41:15
-katex: false
-mathjax: false
-mermaid: false
-copyright_info: 本篇文章独立采用 <a href="https://creativecommons.org/licenses/by-sa/4.0/" rel="external nofollow noreferrer" target="_blank">CC BY-SA 4.0</a> 许可协议，版权归作者所有。
 ---
 
 原作者 [TysonTan](https://tysontan.com/home-zh/) ，感谢 [KDE](https://kde.org/zh-cn/) 、[Krita](https://krita.org/) 和 [安同开源社区](https://aosc.io/zh-cn/) 采取开放的协议。
