--- a/source/_posts/文章效果与字体编码测试.md
+++ b/source/_posts/文章效果与字体编码测试.md
@@ -5,11 +5,8 @@ categories:
   - 计算机
   - 网站搭建
 tags: 网站搭建
-cover: https://s2.hdslb.com/bfs/article/e4bb9f697983d94cd838ee6fda074c23b489052e.png@1e_1c.webp
-katex: true
+photos: https://s2.hdslb.com/bfs/article/e4bb9f697983d94cd838ee6fda074c23b489052e.png@1e_1c.webp
 description: 包括 Markdown、数学、以及标签外挂。
-mathjax: false
-mermaid: true
 abbrlink: a36a68fc
 date: 2022-12-02 08:18:18
 updated: 2023-07-26 15:00:18
@@ -77,21 +74,21 @@ updated: 2023-07-26 15:00:18
 
 ---
 
-[链接](https://lynxcatthethird-person.netlify.app/)
+[链接](https://lynxcatthethird.github.io/)
 
-[链接（带有标题）](https://lynxcatthethird-person.netlify.app/ "标题")
+[链接（带有标题）](https://lynxcatthethird.github.io/ "标题")
 
-<https://lynxcatthethird-person.netlify.app/>
+<https://lynxcatthethird.github.io/>
 
 <tsfxlyx@qq.com>
 
-**[带格式化的链接](https://lynxcatthethird-person.netlify.app/)**
+**[带格式化的链接](https://lynxcatthethird.github.io/)**
 
 [引用类型链接][1]
 
-[1]: https://lynxcatthethird-person.netlify.app/
+[1]: https://lynxcatthethird.github.io/
 
-![图片](https://i0.hdslb.com/bfs/album/335657374a640f1748c290003b8851caa7db114d.png@1e_1c.webp "带有标题")
+![图片](https://s2.hdslb.com/bfs/album/335657374a640f1748c290003b8851caa7db114d.png@1e_1c.webp "带有标题")
 
 <table>
     <tr>
