--- a/source/_posts/有你-真好.md
+++ b/source/_posts/有你-真好.md
@@ -1,10 +1,6 @@
 ---
 title: 有你，真好
-katex: false
-mathjax: false
-mermaid: false
-cover: >-
-  https://s2.hdslb.com/bfs/article/a158da752a2a0790346d46673d01bf8d1352440272.jpg@1e_1c.webp
+photos: https://s2.hdslb.com/bfs/article/a158da752a2a0790346d46673d01bf8d1352440272.jpg@1e_1c.webp
 tags:
   - 生活随笔
 categories:
