--- a/source/_posts/生物备战-难题分析（1）.md
+++ b/source/_posts/生物备战-难题分析（1）.md
@@ -7,13 +7,10 @@ categories:
 tags:
   - 生物
   - 典题分析
-cover: "https://s2.hdslb.com/bfs/article/0b9dfd3e95fb368fe4f5e52534e6035910466bb3.jpg@1e_1c.webp"
+photos: https://s2.hdslb.com/bfs/article/0b9dfd3e95fb368fe4f5e52534e6035910466bb3.jpg@1e_1c.webp
 abbrlink: 409e60fe
 date: 2023-06-02 16:09:05
 updated: 2023-06-02 16:09:05
-katex: false
-mathjax: false
-mermaid: false
 description: 潍坊的题真难……
 ---
 # 2023 三模 13 题
