--- a/source/_posts/类原生优化计划.md
+++ b/source/_posts/类原生优化计划.md
@@ -8,10 +8,7 @@ categories:
 abbrlink: 4097fa9
 date: 2023-07-08 16:27:55
 updated: 2023-07-08 16:27:55
-cover: https://s2.hdslb.com/bfs/article/eecc20f3eb6a274a1a46c985c1706df57bfde092.jpg@1e_1c.webp
-katex: false
-mathjax: false
-mermaid: false
+photos: https://s2.hdslb.com/bfs/article/eecc20f3eb6a274a1a46c985c1706df57bfde092.jpg@1e_1c.webp
 description: 类原生真好用～
 ---
 
