--- a/source/_posts/网站速度优化指北.md
+++ b/source/_posts/网站速度优化指北.md
@@ -1,8 +1,5 @@
 ---
 title: 网站速度优化指北
-katex: false
-mathjax: false
-mermaid: false
 categories:
   - 科学与技术
   - 计算机
@@ -11,7 +8,7 @@ tags: 网站搭建
 abbrlink: a63f345a
 date: 2023-07-17 08:00:30
 updated: 2023-07-21 08:00:30
-cover: https://s2.hdslb.com/bfs/article/7637c5a0da6c6beeeed6d7ca2509de66d16762b8.jpg@1e_1c.webp
+photos: https://s2.hdslb.com/bfs/article/7637c5a0da6c6beeeed6d7ca2509de66d16762b8.jpg@1e_1c.webp
 description: 这个页面怎么这么慢啊啊啊啊啊啊！
 ---
 
