fix: 修改一些选项 fix: 更新软件包 fix: 重新添置 abbrlink merge: 恢复小工具 fix: 修改gitignore feat: 添加文章

--- a/source/_posts/文章效果与字体编码测试.md
+++ b/source/_posts/文章效果与字体编码测试.md
@@ -114,7 +114,7 @@ int main{
 }
 ```
 
-这是~~下划线~~删除线
+这是<u>下划线</u>~删除线~
 
 # 数学
 
@@ -132,19 +132,17 @@ $F=G=m_\textsf{物}g=1kg·9.8N/kg=9.8N$
 
 人体对地面的压力 $p=F/s=588N/0.05m^2=11760Pa$
 
-# 渲染器拓展语法测试
+## 化学方程式
 
-这是 被注释文本
+$\ce{C2H5OH + 3O2 -> 2CO2 + 3H2O}$
 
-*[被注释文本]: 注释内容
+$\ce{CH4 + 2O2 ->[\text{点燃}] CO2 + 2H2O}$
 
-上标^示例^
+$\ce{N2 + 3H2 <=>[高温、加压][催化剂] 2NH3}$
 
-下标~示例~
+$\ce{BaCO3 + H2SO4 -> BaSO4 v + H2O + CO2 ^}$
 
-脚注示例[^1]
-
-[^1]: 脚注是指附在文章页面的最底端的，对某些东西加以说明的注文。
+$\ce{S2O3^2- +2H+ = S v +SO2 ^ +H2O}$
 
 # 字体测试
 
@@ -167,10 +165,6 @@ $F=G=m_\textsf{物}g=1kg·9.8N/kg=9.8N$
 <p style="font-size:32px;">勇敢追逐自己的色彩。</p>
 
 ## 特殊
-
-古汉语钩识号<span style="font-size:4em;">𖿢</span>
-
-重文号<span style="font-size:4em;">𖿣</span>
 
 7 个知识共享（Creative Commons）许可图标<span style="font-size:4em;">⊜🄍🄎🄏🅭🅮🅯</span>
 
